# ai-experience-hub

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  app.py  pyproject.toml
src/: app.py  auth.py  config.py  errors.py  logger.py  security.py
src/sdk/: __init__.py  client.py
src/services/: agent_service.py  ai_service.py
src/static/css/: style.css
src/static/js/: agent.js  chat.js  image_gen.js  theme.js  vision.js
src/templates/: about.html  agent.html  base.html  chat.html  dashboard.html  image_gen.html  login.html  settings.html  status.html  vision.html
src/views/: agent.py  chat.py  image_gen.py  main.py  vision.py
tests/: conftest.py  test_agent.py  test_auth.py  test_chat.py  test_image_gen.py  test_sdk.py  test_vision.py
