[project]
name = "muse-spark-explorer"
version = "0.1.0"
description = "A production-quality Python Flask web application demonstrating Meta Muse Spark API capabilities."
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
dependencies = [
    "Flask>=3.0.0",
    "Flask-WTF>=1.2.0",
    "Flask-Limiter>=3.7.0",
    "Flask-Talisman>=1.1.0",
    "Flask-Caching>=2.1.0",
    "python-dotenv>=1.0.0",
    "gunicorn>=22.0.0",
    "pillow>=10.3.0",
    "beautifulsoup4>=4.12.0",
    "markdown>=3.6",
    "httpx>=0.27.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "coverage>=7.5.0"
    ]

[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"
